@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

abstract class "StorableList"{
    - path: String
    + StorableList(path: String): StorableList
    + load()
    + save()
    + {abstract} parse(s:String)
    + {abstract} unparse(t:T)

}

interface "<<interface>>\nFindable" {
    + find(date: LocalDate): ArrayList<T>
}
class Data{
    + getInstance():Data
    + load(): void
    + save(): void
    + clear(): void
}
class ActivityList{
    + find(date: LocalDate): ArrayList<T>
    + parse(s:String)
    + unparse(t:T)
}
class DietList{
+ find(date: LocalDate): ArrayList<T>
    + parse(s:String)
    + unparse(t:T)
}
class SleepList{
+ find(date: LocalDate): ArrayList<T>
    + parse(s:String)
    + unparse(t:T)
}

class ActivityGoalList{
    + parse(s:String)
    + unparse(t:T)
}
class DietGoalList{
    + parse(s:String)
    + unparse(t:T)
}
class SleepGoalList{
    + parse(s:String)
    + unparse(t:T)
}


"<<interface>>\nFindable" <|.. ActivityList
"<<interface>>\nFindable" <|.. DietList
"<<interface>>\nFindable" <|.. SleepList

"StorableList" <|-- ActivityList
"StorableList" <|-- DietList
"StorableList" <|-- SleepList
"StorableList" <|-- ActivityGoalList
"StorableList" <|-- DietGoalList
"StorableList" <|-- SleepGoalList

Data "1" --u- "1" ActivityList : contains >
Data "1" --u- "1   " DietList : contains >
Data "1" --u- "1" SleepList : contains >
Data "1" --u- "1" ActivityGoalList : contains >
Data "1 " --u- "1" DietGoalList : contains >
Data "1" --u- "1" SleepGoalList : contains >





@enduml